# pyrsbase64

./: Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
crates/basen-internal/: Cargo.toml
crates/basen-internal/src/: err.rs  lib.rs  result.rs
python/pyrsbase64/: __init__.py  pyrsbase64.pyi
python/tests/: test_compare_py_base64.py
src/: altchars.rs  lib.rs  module.rs  pybuf.rs
