[package]
name = "pyrsbase64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyrsbase64"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
pyo3 = { version = "^0.26" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
