[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "pyrsbase64"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.optional-dependencies]

[dependency-groups]
dev = [{ include-group = "lint" }, { include-group = "test" }]
lint = ["mypy>=1.18.2", "ruff>=0.13.1"]
test = ["pytest>=8.4.2", "pytest-cov>=7.0.0"]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
