[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "pyrsbase64"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
authors = [{ name = "Bakyt Niiazaliev", email = "bakyt.worker@gmail.com" }]

[project.optional-dependencies]

[dependency-groups]
dev = [{ include-group = "lint" }, { include-group = "test" }]
lint = ["mypy>=1.18.2", "ruff>=0.13.1"]
test = ["pytest>=8.4.2", "pytest-cov>=7.0.0"]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[tool.mypy]
strict = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.pytest.ini_options]
addopts = "-v"
